Add AddApplication method to server
