# api/applications/applications.swagger.json
@@ -46,6 +46,27 @@
         "tags": [
           "Applications"
         ]
+      },
+      "post": {
+        "summary": "AddApplication associates an application with GitOps automation to the cluster",
+        "operationId": "Applications_AddApplication",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1AddApplicationResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "Applications"
+        ]
       }
     },
     "/v1/applications/{name}": {
@@ -87,6 +108,22 @@
     }
   },
   "definitions": {
+    "AddApplicationRequestDeploymentType": {
+      "type": "string",
+      "enum": [
+        "KUSTOMIZE",
+        "HELM"
+      ],
+      "default": "KUSTOMIZE"
+    },
+    "AddApplicationRequestSourceType": {
+      "type": "string",
+      "enum": [
+        "GIT",
+        "CHART"
+      ],
+      "default": "GIT"
+    },
     "protobufAny": {
       "type": "object",
       "properties": {
@@ -114,6 +151,14 @@
           "items": {
             "$ref": "#/definitions/protobufAny"
           }
+        }
+      }
+    },
+    "v1AddApplicationResponse": {
+      "type": "object",
+      "properties": {
+        "application": {
+          "$ref": "#/definitions/v1Application"
         }
       }
     },
